--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,23 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/app.ts",
-      "use": "@vercel/node",
-      "config": { "distDir": "dist" }
+      "src": "dist/server.js", 
+      "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/dist/app.js"
+      "dest": "dist/server.js"
     }
-  ]
+  ],
+  "env": {
+    "DATABASE_URL": "@POSTGRES_URL" 
+  },
+  "functions": {
+    "api/**/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
+  }
 }
