--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,11 @@
   ],
   "env": {
     "DATABASE_URL": "@POSTGRES_URL" 
+  },
+  "functions": {
+    "api/**/*.js": {
+      "memory": 1024,
+      "maxDuration": 10
+    }
   }
- 
 }
