--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.2.2",
     "sequelize": "^6.37.3",
+    "serverless-http": "^3.2.0",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
     "typescript": "^5.5.3",
