config.json exposed

--- a/vercel.json
+++ b/vercel.json
@@ -12,10 +12,7 @@
       "dest": "dist/server.js"
     }
   ],
-  "functions": {
-    "api/**/*.js": {
-      "memory": 1024,
-      "maxDuration": 10
-    }
+  "env": {
+    "POSTGRES_URL": "@POSTGRES_URL" 
   }
 }
