--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,5 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/server.js", 
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/server.js"
-    }
-  ],
-  "env": {
-    "POSTGRES_URL": "@POSTGRES_URL" 
-  }
+  "devCommand": "ts-node-dev src/server.ts"
+
 }
