--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,4 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "dist/server.js", 
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/server.js"
-    }
-  ],
-  "env": {
-    "POSTGRES_URL": "postgres://default:UtS6ev2zFBMO@ep-jolly-waterfall-a4o5sahh-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require" 
-  }
+  "devCommand": "ts-node-dev src/server.ts"
 }
